--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,8 @@
     --aqua-glow: rgb(0, 213, 255);
     --low-transparency: rgba(255, 255, 255, 0.05);
     --white: rgba(255, 255, 255, 1);
+    --low-white: rgba(255, 255, 255, 0.6);
+    --font-black: rgba(0, 0, 0, 0.6);
 }
 
 * {
@@ -17,22 +19,60 @@
 
 body {
     background-color: var(--background-color);
+    width: 100vw;
+    overflow-x: hidden;
 }
 
 .navbar {
     line-height: 4rem;
-    width: 50%;
+    width: 30%;
     margin-left: auto;
     margin-right: auto;
     padding-top: 1vw;
+    top: 0;
+    left: 40%;
+    position: absolute;
+    z-index: 99;
 }
 
 .navbar > ul {
     display: flex;
     list-style: none;
-    gap: 3vw;
+    gap: 4vw;
     align-items: center;
+}
+
+.navbar > ul > li {
+    height: 3rem;
+}
+
+.navbar > ul > li > a {
+    text-decoration: none;
     color: var(--font-gray);
+    cursor: pointer;
+}
+
+.navbar > ul > li > a:hover, .navbar > ul > li > a:focus {
+    color: var(--low-white);
+}
+
+.navbar > ul > .active {
+    border-bottom: 1px solid var(--aqua-glow);
+}
+
+.navbar > ul > .active > a {
+    color: var(--low-white);
+}
+
+.glow {
+    width: 50vw;
+    height: 50vw;
+    background-color: var(--aqua-glow);
+    z-index: 10;
+    position: absolute;
+    top: -50vw;
+    left: -50vw;
+    box-shadow: 0vw 0vw 100vw var(--aqua-glow);
 }
 
 .logo {
@@ -68,6 +108,7 @@ main {
     margin-right: auto;
     align-items: center;
     position: relative;
+    margin-top: 3rem;
 }
 
 main > .imageContainer {
@@ -99,6 +140,8 @@ main > .imageContainer > .title {
 
 main > .imageContainer > .mainImg {
     position: absolute;
+    top: -1vw;
+    width: 30vw;
     z-index: 5;
 }
 
@@ -107,7 +150,7 @@ main > .mainInfo {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 45%;
+    width: 50%;
     top: 20vh;
     left: 60%;
     gap: 2vw;
@@ -154,59 +197,144 @@ main > .mainInfo > #connect:focus {
 
 .about {
     width: 100vw;
-    background: linear-gradient(to bottom, rgb(75, 149, 219),#5acdcb); 
+    /* background: linear-gradient(to bottom, rgb(62, 147, 227),#5acdcb);  */
+    /* background-color: rgb(24, 21, 21); */
+    background: linear-gradient(109.6deg, rgb(24, 31, 40) 11.2%, rgb(16, 37, 60) 51.2%, rgb(0, 0, 0) 98.6%);
     position: absolute;
     z-index: 10;
     top: 88vh;
-    box-shadow: 0 0 10px var(--font-gray);
+    box-shadow: 0 0 15px var(--font-black);
     border-top-left-radius: 5vw;
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: center;
-    gap: 1vw;
+    gap: 3vw;
+    margin-top: -1.5rem;
 }
 
 .about > .about-left {
     margin-top: 2vw;
     width: 50%;
-    padding: 2vw;
+    padding: 2vw 0;
+    padding-right: 3vw;
     display: flex;
     flex-direction: column;
     margin-left: 2vw;
     gap: 1rem;
+    color: var(--font-gray);
+}
+
+.about > .about-left > h1 {
+    font-family: "Jersey 10", sans-serif;
+    font-size: 3vw;
+    letter-spacing: 0.2vw;
+    color: var(--aqua-glow);
+}
+
+.about > .about-left .imp {
+    font-weight: 450;
+}
+
+.about > .about-left > .customTags {
+    color: var(--aqua-glow);
+    font-size: 2vw;
+    font-family: "Jersey 10", sans-serif;
+    display: flex;
+    gap: 0.5vw;
+    align-items: center;
+}
+
+.about > .about-left > .customTags > span {
+    font-size: 2vw;
+}
+
+.about > .about-left > ul {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5vw;
+    list-style: none;
+    font-weight: 450;
+}
+
+.about > .about-left > ul > li {
+    display: flex;
+    gap: 0.3vw;
+    align-items: center;
+}
+
+.about > .about-left > ul > li > span {
+    font-size: 0.8vw;
 }
 
 .about > .about-right {
+    padding: 2vw 1vw;
+    padding-right: 2vw;
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    width: 30%;
-    height: 100%;
+    width: 35%;
+    align-self: flex-end;
     align-items: center;
     justify-content: center;
+    margin-bottom: 1vw;
 }
 
 .about > .about-right > .imageContainer2 {
     display: flex;
-    gap: 1rem;
+    gap: 1vw;
     align-items: center;
     justify-content: center;
 }
 
 .about > .about-right > .imageContainer2 > .image {
-    width: 10vw;
+    width: 8vw;
+    filter: drop-shadow(0 0 4px var(--font-gray));
+}
+
+.about > .about-right > .imageContainer2 > .title {
+    font-size: 1.5vw;
+    color: var(--font-gray);
+    font-weight: 450;
 }
 
 .about > .about-right > .mail {
+    color: var(--font-gray);
+    padding: 1vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 0.5rem;
+    gap: 1vw;
+}
+
+.about > .about-right > .mail > .title {
+    display: flex;
+    align-items: center;
+    gap: 0.5vw;
+    font-size: 1vw;
+    font-weight: 400;
 }
 
 .about > .about-right > .mail > .info {
     display: flex;
     gap: 0.5vw;
     align-items: center;
+}
+
+.about > .about-right > .mail > .info > a {
+    font-size: 1.5vw;
+    text-decoration: none;
+    color: var(--aqua-glow);
+}
+
+.about > .about-right > .mail > .info > span {
+    color: var(--aqua-glow);
+    font-size: 1.8vw;
+}
+
+.about > .aboutLogo {
+    position: absolute;
+    top: 0;
+    right: 5vw;
+    width: 35%;
+    filter: drop-shadow(0 0 3px var(--font-gray));
 }
