--- a/styles/index.css
+++ b/styles/index.css
@@ -159,7 +159,7 @@ main > .mainInfo {
 main > .mainInfo > .title {
     color: var(--aqua-glow);
     font-weight: 400;
-    font-size: 2rem;
+    font-size: 2.5vw;
     text-transform: capitalize;
     letter-spacing: 1px;
     font-family: "Jersey 10", sans-serif;
@@ -169,21 +169,22 @@ main > .mainInfo > ul {
     display: flex;
     list-style: none;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.5vw;
     color: var(--font-gray);
     font-weight: 100;
+    font-size: 1vw;
 }
 
 main > .mainInfo > #connect {
     width: 40%;
-    padding: 1rem 1.5rem;
+    padding: 1vw 1.5vw;
     color: var(--white);
     background: linear-gradient(to right, rgba(47, 178, 193, 0.8), 
     rgba(0, 132, 255, 0.8)); 
     box-shadow: 0 0 3px var(--aqua-glow);
     border: none;
     outline: none;
-    border-radius: 5px;
+    border-radius: 0.5vw;
     font-size: 1vw;
     cursor: pointer;
 }
