--- a/styles/index.css
+++ b/styles/index.css
@@ -151,7 +151,7 @@ main > .mainInfo {
     flex-direction: column;
     justify-content: center;
     width: 50%;
-    top: 20vh;
+    top: 12vw;
     left: 60%;
     gap: 2vw;
 }
@@ -223,6 +223,8 @@ main > .mainInfo > #connect:focus {
     margin-left: 2vw;
     gap: 1rem;
     color: var(--font-gray);
+    font-size: 1.1vw;
+    letter-spacing: 0.05vw;
 }
 
 .about > .about-left > h1 {
@@ -234,6 +236,7 @@ main > .mainInfo > #connect:focus {
 
 .about > .about-left .imp {
     font-weight: 450;
+    font-size: 1.2vw;
 }
 
 .about > .about-left > .customTags {
@@ -336,6 +339,105 @@ main > .mainInfo > #connect:focus {
     position: absolute;
     top: 0;
     right: 5vw;
-    width: 35%;
+    width: 35vw;
     filter: drop-shadow(0 0 3px var(--font-gray));
+}
+
+@media screen and (width < 1250px) and (width > 450px) {
+    .about {
+        top: 44vw;
+    }
+}
+
+@media screen and (width < 450px) {
+    .about {
+        top: 80vh;
+        padding-bottom: 18vh;
+        flex-direction: column;
+        width: 100vw;
+        overflow: hidden;
+    }
+    .about > .about-left {
+        width: 100vw;
+        padding: 6vw;
+        padding-top: 8vw;
+        padding-right: 10vw;
+        font-size: 2.5vw;
+        letter-spacing: 0.1vw;
+    }
+    .about > .about-left .imp {
+        font-size: 3vw;
+    }
+    .about > .about-left > ul > li > span {
+        font-size: 2vw;
+    }
+    .about > .aboutLogo {
+        top: 3vw;
+    }
+    .about > .about-left > h1 {
+        font-size: 10vw;
+    }
+    .about > .about-left > .customTags {
+        font-size: 4vw;
+        gap: 2vw;
+    }
+    .about > .about-left > .customTags > span {
+        font-size: 4vw;
+    }
+    .about > .about-right {
+        width: 60vw;
+        align-self: center;
+    }
+    .about > .about-right > .imageContainer2  {
+        gap: 4vw;
+    }
+    .about > .about-right > .imageContainer2 > .image {
+        width: 40%;
+    }
+    .about > .about-right > .imageContainer2 > .title {
+        font-size: 3vw;
+    }
+    .about > .about-right > .mail > .title {
+        font-size: 2.5vw;
+    }
+    .about > .about-right > .mail > .info {
+        gap: 1.5vw;
+        align-items: center;
+    }
+    .about > .about-right > .mail > .info > span {
+        font-size: 3.5vw;
+    }
+    .about > .about-right > .mail > .info > a {
+        font-size: 4vw;
+    }
+    .logo {
+        width: 20vw;
+        position: absolute;
+        top: 5vw;
+        left: 5vw;
+    }
+    .navbar {
+        position: fixed;
+        left: 50%;
+        transform: translate(-50%, 0);
+        top: 85vh;
+        padding: 1vw 2vw;
+        background-color: var(--font-black);
+        align-self: center;
+        width: 70vw;
+        z-index: 99;
+        line-height: 3rem;
+        border-radius: 1vw;
+    }
+    .navbar > ul {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
+    #resume > button {
+        top: 7vw;
+        margin-right: 3vw;
+        font-size: 2vw;
+        padding: 1.5vw 2.5vw;
+    }
 }
