--- a/styles/index.css
+++ b/styles/index.css
@@ -140,8 +140,9 @@ main > .imageContainer > .title {
 
 main > .imageContainer > .mainImg {
     position: absolute;
-    top: -1vw;
-    width: 30vw;
+    top: 8vw;
+    left: 12vw;
+    width: 15vw;
     z-index: 5;
 }
 
@@ -359,7 +360,9 @@ main > .mainInfo > #connect:focus {
         left: -7vh;
     }
     main > .imageContainer > .mainImg {
-        width: 35vh;
+        width: 19vh;
+        top: 9vh;
+        left: 14vh;
     }
     main > .imageContainer > .title {
         top: 23vh;
@@ -368,7 +371,7 @@ main > .mainInfo > #connect:focus {
     }
     main > .mainInfo {
         position: absolute;
-        top: 4vh;
+        top: 5vh;
         left: 0%;
         transform: translate(-8%, 0);
         width: 70vw;
@@ -378,10 +381,11 @@ main > .mainInfo > #connect:focus {
         font-size: 7vw;
     }
     main > .mainInfo > #connect {
-        padding: 2.5vw 3vw;
-        font-size: 2.5vw;
+        padding: 3vw 4vw;
+        font-size: 3vw;
         align-self: center;
         margin-top: 2vh;
+        border-radius: 0.2vh;
     }
     main > .mainInfo > ul {
         font-size: 2.5vw;
